# Computational-Mathematics

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/2sem/: GS.cpp  GS.hpp  funcs.hpp  hybrid.cpp  laks-vendorff.cpp  ugolok.cpp
src/Gradient/: CG.cpp  CG.hpp
src/Integration/: Quadrature.cpp  Quadrature.hpp  Rectangle.cpp  Rectangle.hpp
src/Interpolation/: Cubic_spline.cpp  Cubic_spline.hpp  Lagrange.cpp  Lagrange.hpp  Newton.cpp  Newton.hpp
src/Matrixes/: MatrixOnCSR.cpp  Pentadiagonal.cpp  Pentadiagonal.hpp  StandardMatrix.cpp  StandardMatrix.hpp  Standard_Inv.cpp  Tridiagonal.cpp  Tridiagonal.hpp
src/NonlinearEq/: Newton_eq.cpp  Newton_eq.hpp  SIteration.cpp  SIteration.hpp
src/ODE/: Dorman-Prince.cpp  Dorman-Prince.hpp  Eiler.hpp  Runge-kutta.cpp  Runge-kutta.hpp
src/SimpleIteration/: SI.cpp  SI.hpp
src/UsefulOperations/: VectorOperations.cpp  VectorOperations.hpp
tasks/: CMakeLists.txt
tasks/hw1/: laks_CFL_0.txt  laks_CFL_1.txt  laks_CFL_2.txt  second_task.txt  ugolok_CFL_0.txt  ugolok_CFL_1.txt  ugolok_CFL_2.txt
tasks/hw2/txts/: second_task_1.txt  second_task_2.txt  second_task_3.txt  second_task_4.txt  second_task_5.txt  second_task_6.txt  task1.txt
tests/: 2ex_1task.cpp  2ex_2task.cpp  CMakeLists.txt  SECOND_task1.cpp  SECOND_task3.cpp  SECOND_task4.cpp  SECOND_task5.cpp  daywork.cpp  homework.cpp  interpolation.cpp  task2.cpp  task3.cpp  task4.cpp
tests/1sem/: ADDITIONAL_task.cpp  SECOND_task1.cpp  SECOND_task2.cpp  SECOND_task3.cpp  SECOND_task4.cpp  interpolation.cpp  task3.cpp  task4.cpp  task5.cpp
tests/2sem/: task1.cpp  task2.cpp  test_matrix.cpp
